Generics_Interface_Super_Extend_WildCard/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:37: error: incompatible types: StringLengthTransformer cannot be converted to Transformer<Object,Integer>
        Transformer<Object, Integer> transformer = new StringLengthTransformer(); // Compile-time error: incompatible types
                                                   ^
1 error
 
========================= 
ExtendJ errors for Code1.java 
 
========================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Interface_Super_Extend_WildCard\Code1.java (at line 37)
	Transformer<Object, Integer> transformer = new StringLengthTransformer(); // Compile-time error: incompatible types
	                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type mismatch: cannot convert from StringLengthTransformer to Transformer<Object,Integer>
----------
1 problem (1 error)
